# ML_practice

./: pyproject.toml
ML_practice/: LR_from_scratch.ipynb
tests/: test_torch_teachings.py
